add code in files types: ,.example,.yml,.js,.txt,.md,.svg,.php,.json,.css,.lock,.sh,.conf,.ini,.graphml,.sql,.html,.xml,.map,.crt,.pem,.config,.vue,.key,.xsd,.markdown,.dist,.phpt,.pl,.masterUpdate,.stub,.rst,.m4,.c,.h,.scss,.neon,.yaml,.doxyfile,.inc,.py,.pbm,.LICENSE,.styl,.bat,.template,.y,.csv,.tsv,.slk,.TXT,.cnf,.wsdl,.base64,.less,.mustache,.tpl,.twig,.hjson,.toml,.sample remove code in files types:

--- a/content.html
+++ b/content.html
@@ -3,5 +3,6 @@
 <head></head>
 <body>
   <div>eapqnuffpu pxolvhswpk gyycsqicrc nlliosmcbs hqxdebvrrm swgbypkcci</div>
+  <div>feqdssvlwj</div>
 </body>
 </html>
